@@ -62,9 +62,9 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
         public boolean onScale(ScaleGestureDetector detector) {
             float scaleFactor = detector.getScaleFactor();
             if (scaleFactor > 1) { //Send F4 To Zoom Out
-                AWTInputBridge.sendKey((char)115,115);
-            } else { //116 F5 To Zoom In
-                AWTInputBridge.sendKey((char)116, 116);
+                AWTInputBridge.sendKey((char)AWTInputEvent.VK_F3, AWTInputEvent.VK_F3);
+            } else { //116 F3 To Zoom In
+                AWTInputBridge.sendKey((char)AWTInputEvent.VK_F4,AWTInputEvent.VK_F4);
             }
             return true;
         }
@@ -182,7 +182,9 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
                     ){
                         longPressTriggered = true;
                         Log.i("Longpress: ",""+totalMovement);
-                        AWTInputBridge.sendKey((char)118,118);
+
+                        AWTInputBridge.sendKey((char)AWTInputEvent.VK_F5,AWTInputEvent.VK_F5);
+                        AWTInputBridge.sendMousePress(AWTInputEvent.BUTTON1_DOWN_MASK);
                         if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
                             vb.vibrate(VibrationEffect.createOneShot(100, VibrationEffect.DEFAULT_AMPLITUDE));
                         } else {
@@ -199,16 +201,12 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
                     } else {
                         switch (action) {
                             case MotionEvent.ACTION_POINTER_DOWN: //Second finger right clicking
-                                AWTInputBridge.sendKey((char)122,122);
+                                AWTInputBridge.sendKey((char)AWTInputEvent.VK_F11,AWTInputEvent.VK_F11);
                                 AWTInputBridge.sendMousePress(AWTInputEvent.BUTTON1_DOWN_MASK);
                             case MotionEvent.ACTION_UP: // 1
                                 if(longPressTriggered){
-                                    // Currently a click is needed to end the drag. MB1
-                                    // is not good for banking so MB2 sending instead. Annoying but
-                                    // better than the alternative. other buttons 'MB3' ect same outcome
-                                    // probably should null the click on client if isHeld is true.
-                                    AWTInputBridge.sendKey((char)122,122);
-                                    AWTInputBridge.sendMousePress(AWTInputEvent.BUTTON1_DOWN_MASK);
+                                    // End clickdrag
+                                    AWTInputBridge.sendKey((char)AWTInputEvent.VK_F5,AWTInputEvent.VK_F5);
                                 }
                                 break;
                             case MotionEvent.ACTION_CANCEL: // 3
@@ -252,7 +250,7 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
                 return true;
             });
 
-            final File miniclient = new File(Tools.DIR_DATA, "miniclient.jar");
+            final File miniclient = new File(Tools.DIR_DATA, "rt4.jar");
             final File config = new File(Tools.DIR_DATA, "config.json");
             final String javaArgs = getIntent().getExtras().getString("javaArgs");
 
@@ -304,12 +302,12 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
                     break;
                 case R.id.camera:
                     if(!mouseState){ // Camera Mode On
-                        AWTInputBridge.sendKey((char)120,120);
+                        AWTInputBridge.sendKey((char)AWTInputEvent.VK_F9,(char)AWTInputEvent.VK_F9); // Send F9
                         v.setBackground(getResources().getDrawable( R.drawable.control_button_pressed ));
                         mouseState = true;
                     }
                     else{ // Camera Mode off
-                        AWTInputBridge.sendKey((char)119,119);
+                        AWTInputBridge.sendKey((char)AWTInputEvent.VK_F8,(char)AWTInputEvent.VK_F8);
                         v.setBackground(getResources().getDrawable( R.drawable.control_button_normal ));
                         mouseState = false;
                     }
@@ -330,13 +328,13 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
 
     private void clearRC(){
         rcState = false;
-        AWTInputBridge.sendKey((char)121,121);
+        AWTInputBridge.sendKey((char)AWTInputEvent.VK_F10,AWTInputEvent.VK_F10);
         findViewById(R.id.mb2).setBackground(getResources().getDrawable( R.drawable.control_button ));
     }
 
     private void activateRC(){
         rcState = true;
-        AWTInputBridge.sendKey((char)122,122);
+        AWTInputBridge.sendKey((char)AWTInputEvent.VK_F11,AWTInputEvent.VK_F11);
         findViewById(R.id.mb2).setBackground(getResources().getDrawable( R.drawable.control_button_pressed ));
     }
 
@@ -368,15 +366,13 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
         conT = this;
         JREUtils.redirectAndPrintJRELog(this);
 
-        // Load saved username and password
-        SharedPreferences preferences = PreferenceManager.getDefaultSharedPreferences(this);
-        String name = preferences.getString("username","");
-        String pass = preferences.getString("password","");
-
         try {
             JREUtils.jreReleaseList = JREUtils.readJREReleaseProperties();
             
             List<String> javaArgList = new ArrayList<>();
+
+            // Load saved username and password
+            SharedPreferences preferences = PreferenceManager.getDefaultSharedPreferences(this);
 
             // Enable Caciocavallo
             Tools.getCacioJavaArgs(javaArgList,false);
@@ -384,23 +380,20 @@ public class JavaGUILauncherActivity extends  BaseActivity implements View.OnTou
             if (javaArgs != null) {
                 javaArgList.addAll(Arrays.asList(javaArgs.split(" ")));
             } else {
+                javaArgList.add("-Dusername=" + preferences.getString("username",""));
+                javaArgList.add("-Dpassword=" + preferences.getString("password",""));
+                javaArgList.add("-DpluginDir="+Tools.DIR_DATA + "/plugins/");
+                javaArgList.add("-DclientHomeOverride="+Tools.DIR_DATA+"/");
                 javaArgList.add("-jar");
                 javaArgList.add(miniclient.getAbsolutePath());
                 javaArgList.add(config.getAbsolutePath()); // Pass client config as arg0
-                javaArgList.add("username=miniclientparam:"+name);
-                javaArgList.add("password=miniclientparam:"+pass);
+                javaArgList.add(Tools.DIR_DATA + "/plugins/");
             }
 
             Logger.getInstance().appendToLog("Info: Java arguments: " + Arrays.toString(javaArgList.toArray(new String[0])));
             Log.i("Info: Java arguments: ",Arrays.toString(javaArgList.toArray(new String[0])));
             
             // Run java on sandbox, non-overrideable.
-            Collections.reverse(javaArgList);
-
-            javaArgList.add("-Xbootclasspath/a:" + Tools.DIR_DATA + "/pro-grade.jar");
-            javaArgList.add("-Djava.security.manager=net.sourceforge.prograde.sm.ProGradeJSM");
-            javaArgList.add("-Djava.security.policy=" + Tools.DIR_DATA + "/java_sandbox.policy");
-            Collections.reverse(javaArgList);
 
             JREUtils.launchJavaVM(this, javaArgList);
         } catch (Throwable th) {
